--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Handlee&display=swap');
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+      body {
+        background-image: linear-gradient( 130deg,  rgba(255,253,218,1) 1.9%, rgba(246,210,255,1) 39.3%, rgba(152,222,254,1) 64.7%, rgba(251,255,210,1) 100.8% );
+      }
+    </style>
+  </head>
+  <body>
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+  </body>
 </html>
