--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       @import url('https://fonts.googleapis.com/css?family=Handlee&display=swap');
 
       body {
+        width: 100%;
+        height: 100%;
         background-image: linear-gradient( 130deg,  rgba(255,253,218,1) 1.9%, rgba(246,210,255,1) 39.3%, rgba(152,222,254,1) 64.7%, rgba(251,255,210,1) 100.8% );
       }
     </style>
